2004-06-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Marked gnome-system-tools as proposed.

2004-06-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added a GNOME 2.8 "proposed" section.
	Added gnome-nettool and marked it proposed.
	Marked evolution, evolution-exchange, gtkhtml, gal and
	evolution-data-server as proposed.
	Marked evolution-webcal as proposed.

2005-06-01  Rodney Dawes  <dobey@novell.com>

	* translation-status.xml: Add evolution-exchange to extras

2004-05-27  Rodney Dawes  <dobey@novell.com>

	* translation-status.xml: Acme is part of control-center now
	bonobo-config code hasn't been touched in 3 years, it's dead
	Add evolution-webcal
	Add comment section with local variables for emacs xml mode

2004-05-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added vino.

2004-05-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added orca.

2004-05-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: procman has been branched.

2004-05-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: regexxer should be in fifth-toe. Fix.

2004-05-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: regexxer has been added.

2004-05-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-applets has been branched.

2004-05-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: eel and nautilus have been branched.

2004-05-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-session and gnome-desktop
	have been branched.

2004-05-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-panel has been branched.

2004-05-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-media has been branched.

2004-05-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed gtk+ and glib branches on