@@ -794,6 +794,17 @@
       </component>
     </version>
   </module>
+  <module name="glom">
+    <version release="gnome-2.8">
+      <component name="glom" dir="glom" group="extras">
+       <podir dir="po"/>
+       <potname name="glom.pot"/>
+       <branch name="HEAD"/>
+       <regenerate/>
+       <download/>
+      </component>
+    </version>
+  </module>
   <module name="gnome-alsamixer">
     <version release="gnome-2.8">
       <component name="gnome-alsamixer" dir="gnome-alsamixer" group="extras">
