@@ -1,3 +1,7 @@
+2004-06-09  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added glom to extras.
+
 2004-06-07  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Marked gnome-system-tools as proposed.
